# cuda-toolkit

./: .gitattributes  AGENTS.md  BUILD.bazel  LICENSE-APACHE  MODULE.bazel  README.md  cuda_toolchain.bzl  exec_binary.bzl
.bcr/: metadata.template.json
.github/workflows/: ci.yml  release.yml  release_prep.sh
common/: BUILD.bazel
cuda/: BUILD.bazel  build_defs.bzl  cuda.BUILD.bazel  cuda_compat_repository.bzl  cuda_component_proxy.bzl  cuda_configure.bzl  cuda_global.bzl  cuda_redist_build_defs.bzl  cuda_redist_repositories.bzl  cuda_redist_repository.bzl  cuda_redist_versions.json  cudnn_redist_versions.json  declare_constraints.bzl  nvshmem_redist_versions.json  redist_proxy_targets.bzl  selects_internal.bzl  versions_helper.bzl
cuda/build_defs/: BUILD.bazel  cuda_cccl.BUILD.bazel  cuda_cccl_github.BUILD.bazel  cuda_compat.BUILD.bazel  cuda_crt.BUILD.bazel  cuda_cublas.BUILD.bazel  cuda_cudart.BUILD.bazel  cuda_cudnn.BUILD.bazel  cuda_cudnn8.BUILD.bazel  cuda_cufft.BUILD.bazel  cuda_culibos.BUILD.bazel  cuda_cupti.BUILD.bazel  cuda_curand.BUILD.bazel  cuda_cusolver.BUILD.bazel  cuda_cusparse.BUILD.bazel  cuda_driver.BUILD.bazel  cuda_nvcc.BUILD.bazel  cuda_nvdisasm.BUILD.bazel  cuda_nvjitlink.BUILD.bazel  cuda_nvml.BUILD.bazel  cuda_nvprune.BUILD.bazel  cuda_nvptxcompiler.BUILD.bazel  cuda_nvrtc.BUILD.bazel  cuda_nvtx.BUILD.bazel  cuda_nvvm.BUILD.bazel  cuda_profiler.BUILD.bazel
cuda/build_templates/: BUILD.bazel  cuda_cccl.BUILD.bazel  cuda_cccl_github.BUILD.bazel  cuda_crt.BUILD.bazel  cuda_cublas.BUILD.bazel  cuda_cudart.BUILD.bazel  cuda_cudnn.BUILD.bazel  cuda_cudnn8.BUILD.bazel  cuda_cufft.BUILD.bazel  cuda_cupti.BUILD.bazel  cuda_curand.BUILD.bazel  cuda_cusolver.BUILD.bazel  cuda_cusparse.BUILD.bazel  cuda_driver.BUILD.bazel  cuda_nvcc.BUILD.bazel  cuda_nvdisasm.BUILD.bazel  cuda_nvjitlink.BUILD.bazel  cuda_nvml.BUILD.bazel  cuda_nvprune.BUILD.bazel  cuda_nvrtc.BUILD.bazel  cuda_nvtx.BUILD.bazel  cuda_nvvm.BUILD.bazel  cuda_profiler.BUILD.bazel
cuda/dummy/: BUILD.bazel
cuda/private/: cuda_toolchain.bzl
cuda/toolchain/: BUILD.bazel  defs.bzl
cudnn/: BUILD.bazel  cudnn_compat_repository.bzl  cudnn_redist_build_defs.bzl  cudnn_redist_repositories.bzl  cudnn_redist_repository.bzl  cudnn_redist_versions.json  redist_proxy_targets.bzl
docs/: cuda.md
e2e/: .bazelrc  BUILD.bazel  MODULE.bazel  cccl_thrust_sort_smoke.cc  cublas_saxpy_smoke.cc  cuda_tools_probe.bzl  cudnn_conv_descriptor_smoke.cc  cudnn_smoke.cc  cufft_1d_smoke.cc  cupti_activity_smoke.cc  curand_device_smoke.cc  curand_generate_smoke.cc  cusolver_cholesky_smoke.cc  cusparse_spmv_smoke.cc  main.cc  nvjitlink_link_smoke.cc  nvml_query_smoke.cc  nvrtc_compile_smoke.cc  nvshmem_device_smoke.cc  nvshmem_smoke.cc  nvtx_range_smoke.cc  smoke_test_common.h
extensions/: BUILD.bazel  cuda.bzl  nvshmem.bzl
gpu/cuda/: build_defs.bzl  cuda_configure.bzl  cuda_redist_repositories.bzl  cuda_redist_versions.bzl  cuda_redist_versions.json  cudnn_redist_versions.json
gpu/cuda/build_templates/: cuda_cccl_github.BUILD.bazel  cuda_cudart.BUILD.bazel  cuda_cudnn.BUILD.bazel  cuda_nvcc.BUILD.bazel  cuda_nvml.BUILD.bazel  cuda_nvrtc.BUILD.bazel  cuda_nvvm.BUILD.bazel
nvshmem/: BUILD.bazel  nvshmem_compat_repository.bzl  nvshmem_redist_build_defs.bzl  nvshmem_redist_repositories.bzl  nvshmem_redist_repository.bzl  nvshmem_redist_versions.json  redist_proxy_targets.bzl
nvshmem/build_defs/: BUILD.bazel  nvshmem.BUILD.bazel
