load("@bazel_skylib//rules:native_binary.bzl", "native_binary")

package(default_visibility = ["//visibility:public"])

platform(
    name = "platform_linux_amd64",
    constraint_values = [
        "@platforms//os:linux",
        "@platforms//cpu:x86_64",
    ],
)

platform(
    name = "platform_linux_arm64",
    constraint_values = [
        "@platforms//os:linux",
        "@platforms//cpu:arm64",
    ],
)

config_setting(
    name = "linux_amd64",
    constraint_values = [
        "@platforms//os:linux",
        "@platforms//cpu:x86_64",
    ],
)

config_setting(
    name = "linux_arm64",
    constraint_values = [
        "@platforms//os:linux",
        "@platforms//cpu:arm64",
    ],
)

config_setting(
    name = "linux_aarch64",
    constraint_values = [
        "@platforms//os:linux",
        "@platforms//cpu:aarch64",
    ],
)

constraint_setting(
    name = "cuda_version",
)

constraint_value(
    name = "cuda_12_1_1",
    constraint_setting = ":cuda_version",
)

constraint_value(
    name = "cuda_12_2_0",
    constraint_setting = ":cuda_version",
)

constraint_value(
    name = "cuda_12_3_1",
    constraint_setting = ":cuda_version",
)

constraint_value(
    name = "cuda_12_3_2",
    constraint_setting = ":cuda_version",
)

constraint_value(
    name = "cuda_12_4_0",
    constraint_setting = ":cuda_version",
)

constraint_value(
    name = "cuda_12_4_1",
    constraint_setting = ":cuda_version",
)

constraint_value(
    name = "cuda_12_5_0",
    constraint_setting = ":cuda_version",
)

constraint_value(
    name = "cuda_12_5_1",
    constraint_setting = ":cuda_version",
)

constraint_value(
    name = "cuda_12_6_0",
    constraint_setting = ":cuda_version",
)

constraint_value(
    name = "cuda_12_6_1",
    constraint_setting = ":cuda_version",
)

constraint_value(
    name = "cuda_12_6_2",
    constraint_setting = ":cuda_version",
)

constraint_value(
    name = "cuda_12_6_3",
    constraint_setting = ":cuda_version",
)

constraint_value(
    name = "cuda_12_8_0",
    constraint_setting = ":cuda_version",
)

constraint_value(
    name = "cuda_12_8_1",
    constraint_setting = ":cuda_version",
)

constraint_value(
    name = "cuda_12_9_0",
    constraint_setting = ":cuda_version",
)

constraint_value(
    name = "cuda_12_9_1",
    constraint_setting = ":cuda_version",
)

constraint_value(
    name = "cuda_13_0_0",
    constraint_setting = ":cuda_version",
)

constraint_value(
    name = "cuda_13_0_1",
    constraint_setting = ":cuda_version",
)

constraint_value(
    name = "cuda_13_0_2",
    constraint_setting = ":cuda_version",
)

constraint_value(
    name = "cuda_13_1_0",
    constraint_setting = ":cuda_version",
)

constraint_value(
    name = "cuda_13_1_1",
    constraint_setting = ":cuda_version",
)
