module(
    name = "cuda_toolkit",
    version = "0.0.0",
    bazel_compatibility = [">=7.4.0"],
)

bazel_dep(name = "bazel_skylib", version = "1.8.2")
bazel_dep(name = "bazel_lib", version = "3.0.0")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "rules_cc", version = "0.2.16")

cuda_ext = use_extension("//extensions:cuda.bzl", "cuda")
cuda_ext.configure(
    cuda_version = "12.8.1",
    cudnn_version = "9.16.0",
)
use_repo(cuda_ext, "cuda")
