load("@bazel_lib//:bzl_library.bzl", "bzl_library")

bzl_library(
    name = "cuda_redist_repositpru",
    srcs = ["cuda_redist_repositpru.bzl"],
    visibility = ["//visibility:public"],
    deps = [":redist_proxy_targets"],
)

bzl_library(
    name = "cuda_compat_repository",
    srcs = ["cuda_compat_repository.bzl"],
    visibility = ["//visibility:public"],
    deps = [":selects_internal"],
)

bzl_library(
    name = "cuda_redist_build_defs",
    srcs = ["cuda_redist_build_defs.bzl"],
    visibility = ["//visibility:public"],
)

bzl_library(
    name = "cuda_redist_repositories",
    srcs = ["cuda_redist_repositories.bzl"],
    visibility = ["//visibility:public"],
    deps = [
        ":cuda_redist_build_defs",
        ":redist_proxy_targets",
    ],
)

bzl_library(
    name = "redist_proxy_targets",
    srcs = ["redist_proxy_targets.bzl"],
    visibility = ["//visibility:public"],
)

bzl_library(
    name = "selects_internal",
    srcs = ["selects_internal.bzl"],
    visibility = ["//visibility:public"],
    deps = ["@bazel_skylib//lib:selects"],
)

bzl_library(
    name = "versions_helper",
    srcs = ["versions_helper.bzl"],
    visibility = ["//visibility:public"],
    deps = [":selects_internal"],
)
