load("@bazel_lib//lib:copy_to_directory.bzl", "copy_to_directory")
load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load("@bazel_skylib//rules:common_settings.bzl", "bool_flag")
load("@rules_cc//cc:cc_library.bzl", "cc_library")
load("@cuda//cudart:version.bzl", _cudart_version = "VERSION")
load("@cuda//cuda:cuda_version.bzl", _cuda_version = "CUDA_VERSION")
load(
     "@cuda//cuda:versions_helper.bzl",
     "if_version_equal_or_greater_than",
)

package(default_visibility = ["//visibility:public"])

# TODO(cerisier): Do differently
copy_to_directory(
    name = "cuda_path",
    srcs = [
        "@cuda//cudart:cuda_header",
        "@cuda//nvcc:ptxas",
        "@cuda//nvcc:fatbinary",
    ] + if_version_equal_or_greater_than(_cuda_version, "13.0.0", if_true = [
        "@cuda//nvvm:libdevice",
    ], if_false = [
        "@cuda//nvcc:libdevice",
    ]),
    include_external_repositories = ["**"],
)

cc_library(
    name = "cuda_headers",
    deps = [
        "@cuda//cccl:headers",
        "@cuda//cublas:headers",
        "@cuda//cudart:headers",
        "@cuda//cudnn:headers",
        "@cuda//cufft:headers",
        "@cuda//cupti:headers",
        "@cuda//curand:headers",
        "@cuda//cusolver:headers",
        "@cuda//cusparse:headers",
        "@cuda//nvcc:headers",
        "@cuda//nvjitlink:headers",
        "@cuda//nvml:headers",
        "@cuda//nvrtc:headers",
        "@cuda//nvtx:headers",
        "@cuda//profiler_api:headers",
    ] + if_version_equal_or_greater_than(_cuda_version, "13.0", [
        "@cuda//crt:headers",
    ]),
)

# This target is needed if users want to have implicit cuda_headers dependencies
# Users can depend on this alias to get the cuda_headers without causing duplicate
# dependencies.
alias(
    name = "implicit_cuda_headers_dependency",
    actual = ":cuda_headers",
)

cc_library(
    name = "cuda",
    deps = [
        "@cuda//cuda:cuda_headers",
        "@cuda//cublas",
        "@cuda//cublas:cublasLt",
        "@cuda//cudart",
        "@cuda//cudnn",
        "@cuda//cufft",
        "@cuda//curand",
    ],
)

alias(
    name = "cuda_driver",
    actual = select({
        "@cuda//driver:cuda_umd_libs": "@cuda//driver:nvidia_driver",
        "//conditions:default": "@cuda//cudart:cuda_driver",
    }),
)

bzl_library(
    name = "build_defs_bzl",
    srcs = ["versions_helper.bzl"],
    deps = [
        "@bazel_skylib//lib:selects",
    ],
)
