load("@bazel_lib//lib:copy_to_directory.bzl", "copy_to_directory")
load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load("@bazel_skylib//rules:common_settings.bzl", "bool_flag")
load("@rules_cc//cc:cc_library.bzl", "cc_library")
load(
     "@cuda_toolkit//cuda:versions_helper.bzl",
     "if_version_equal_or_greater_than",
)
load("@cuda//cuda:selects.bzl", "if_cuda_version")
load("@cuda_toolkit//:exec_binary.bzl", "exec_binary")

package(default_visibility = ["//visibility:public"])

# TODO(cerisier): Do differently
copy_to_directory(
    name = "cuda_path",
    srcs = [
        "@cuda//cudart:cuda_header",
        ":bin/ptxas",
        ":libdevice",
    ],
    include_external_repositories = ["**"],
)

exec_binary(
    name = "bin/ptxas",
    actual = "@cuda//nvcc:ptxas",
)

alias(
    name = "libdevice",
    actual = if_cuda_version(
        ">=13",
        "@cuda//nvvm:libdevice",
        "@cuda//nvcc:libdevice",
    ),
)

cc_library(
    name = "cuda_headers",
    deps = [
        "@cuda//cccl:headers",
        "@cuda//cublas:headers",
        "@cuda//cudart:headers",
        "@cuda//cufft:headers",
        "@cuda//cupti:headers",
        "@cuda//curand:headers",
        "@cuda//cusolver:headers",
        "@cuda//cusparse:headers",
        "@cuda//nvcc:headers",
        "@cuda//nvjitlink:headers",
        "@cuda//nvml:headers",
        "@cuda//nvrtc:headers",
        "@cuda//nvtx:headers",
        "@cuda//profiler_api:headers",
    ] + if_cuda_version(
        ">=13",
        ["@cuda//crt:headers"],
    ),
)

# This target is needed if users want to have implicit cuda_headers dependencies
# Users can depend on this alias to get the cuda_headers without causing duplicate
# dependencies.
alias(
    name = "implicit_cuda_headers_dependency",
    actual = ":cuda_headers",
)

cc_library(
    name = "cuda",
    deps = [
        "@cuda//cuda:cuda_headers",
        "@cuda//cublas",
        "@cuda//cublas:cublasLt",
        "@cuda//cudart",
        "@cuda//cufft",
        "@cuda//curand",
    ],
)

alias(
    name = "cuda_driver",
    actual = select({
        "@cuda//driver:cuda_umd_libs": "@cuda//driver:nvidia_driver",
        "//conditions:default": "@cuda//cudart:cuda_driver",
    }),
)
