load("@bazel_lib//lib:copy_to_directory.bzl", "copy_to_directory")
load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load("@bazel_skylib//rules:common_settings.bzl", "bool_flag")
load("@rules_cc//cc:cc_library.bzl", "cc_library")
load(
     "@cuda_toolkit//cuda:versions_helper.bzl",
     "if_version_equal_or_greater_than",
)
load("@cuda//cuda:selects.bzl", "if_cuda_version")
load("@cuda_toolkit//:exec_binary.bzl", "exec_binary")
load("@cuda_toolkit//:cuda_toolchain.bzl", "cuda_toolchain")

package(default_visibility = ["//visibility:public"])

# TODO(cerisier): Do differently
copy_to_directory(
    name = "cuda_path",
    srcs = [
        "@cuda//cudart:cuda_header",
        ":bin/ptxas",
        ":libdevice",
    ],
    include_external_repositories = ["**"],
)

exec_binary(
    name = "bin/ptxas",
    actual = "@cuda//nvcc:ptxas",
)

alias(
    name = "libdevice",
    actual = if_cuda_version(
        ">=13",
        "@cuda//nvvm:libdevice",
        "@cuda//nvcc:libdevice",
    ),
)

cuda_toolchain(
    name = "cuda_toolchain",
    cuda_path = ":cuda_path",
    ptxas = "@cuda//nvcc:ptxas",
    fatbinary = "@cuda//nvcc:fatbinary",
)

SUPPORTED_EXECS = [
    ("linux", "x86_64"),
    ("linux", "aarch64"),
]

SUPPORTED_TARGETS = [
    ("linux", "x86_64"),
    ("linux", "aarch64"),
]

[
    toolchain(
        name = "cuda_toolchain_{exec_os}_{exec_arch}_to_{target_os}_{target_arch}".format(
            exec_os = exec_os,
            exec_arch = exec_arch,
            target_os = target_os,
            target_arch = target_arch,
        ),
        toolchain_type = "@cuda_toolchain_types//:cuda_toolchain_type",
        toolchain = ":cuda_toolchain",
        exec_compatible_with = [
            "@platforms//os:{exec_os}".format(exec_os = exec_os),
            "@platforms//cpu:{exec_arch}".format(exec_arch = exec_arch),
        ],
        target_compatible_with = [
            "@platforms//os:{target_os}".format(target_os = target_os),
            "@platforms//cpu:{target_arch}".format(target_arch = target_arch),
        ],
    )
    for (exec_os, exec_arch) in SUPPORTED_EXECS
    for (target_os, target_arch) in SUPPORTED_TARGETS
]


cc_library(
    name = "cuda_headers",
    deps = [
        "@cuda//cccl:headers",
        "@cuda//cublas:headers",
        "@cuda//cudart:headers",
        "@cuda//cufft:headers",
        "@cuda//cupti:headers",
        "@cuda//curand:headers",
        "@cuda//cusolver:headers",
        "@cuda//cusparse:headers",
        "@cuda//nvcc:headers",
        "@cuda//nvjitlink:headers",
        "@cuda//nvml:headers",
        "@cuda//nvrtc:headers",
        "@cuda//nvtx:headers",
        "@cuda//profiler_api:headers",
    ] + if_cuda_version(
        ">=13",
        ["@cuda//crt:headers"],
    ),
)

# This target is needed if users want to have implicit cuda_headers dependencies
# Users can depend on this alias to get the cuda_headers without causing duplicate
# dependencies.
alias(
    name = "implicit_cuda_headers_dependency",
    actual = ":cuda_headers",
)

cc_library(
    name = "cuda",
    deps = [
        "@cuda//cuda:cuda_headers",
        "@cuda//cublas",
        "@cuda//cublas:cublasLt",
        "@cuda//cudart",
        "@cuda//cufft",
        "@cuda//curand",
    ],
)

alias(
    name = "cuda_driver",
    actual = select({
        "@cuda//driver:cuda_umd_libs": "@cuda//driver:nvidia_driver",
        "//conditions:default": "@cuda//cudart:cuda_driver",
    }),
)
