load("@rules_cc//cc:cc_binary.bzl", "cc_binary")
load("@rules_cc//cc:cc_library.bzl", "cc_library")

package(default_visibility = ["//visibility:public"])

SMOKE_CUDA_VERSIONS = [
    "12.8.0",
    "12.8.1",
    "12.9.0",
    "12.9.1",
    "13.0.0",
    "13.0.1",
    "13.0.2",
    "13.1.0",
    "13.1.1",
    "13.2.0",
]

[
    platform(
        name = "platform_linux_arm64_cuda_{}".format(version.replace(".", "_")),
        constraint_values = [
            "@platforms//os:linux",
            "@platforms//cpu:arm64",
            "@cuda//:cuda_{}".format(version.replace(".", "_")),
        ],
    )
    for version in SMOKE_CUDA_VERSIONS
]

cc_library(
    name = "smoke_deps",
    defines = [
        "CUDA_SMOKE_HAVE_NVJITLINK=1",
        "CUDA_SMOKE_HAVE_NVML=1",
        "CUDA_SMOKE_HAVE_NVRTC=1",
        "CUDA_SMOKE_HAVE_NVTX=1",
    ] + select({
        "@cuda//:is_cuda_13_0_0": [
            "CUDA_SMOKE_HAVE_DRIVER_API=1",
            "CUDA_SMOKE_HAVE_CUBLAS=1",
            "CUDA_SMOKE_HAVE_CUFFT=1",
            "CUDA_SMOKE_HAVE_CUPTI=1",
            "CUDA_SMOKE_HAVE_CURAND=1",
            "CUDA_SMOKE_HAVE_CUSOLVER=1",
            "CUDA_SMOKE_HAVE_CUSPARSE=1",
            "CUDA_SMOKE_HAVE_PROFILER_API=1",
            "CUDA_SMOKE_HAVE_CUDA_CRT=1",
        ],
        "@cuda//:is_cuda_13_0_1": [
            "CUDA_SMOKE_HAVE_DRIVER_API=1",
            "CUDA_SMOKE_HAVE_CUBLAS=1",
            "CUDA_SMOKE_HAVE_CUFFT=1",
            "CUDA_SMOKE_HAVE_CUPTI=1",
            "CUDA_SMOKE_HAVE_CURAND=1",
            "CUDA_SMOKE_HAVE_CUSOLVER=1",
            "CUDA_SMOKE_HAVE_CUSPARSE=1",
            "CUDA_SMOKE_HAVE_PROFILER_API=1",
            "CUDA_SMOKE_HAVE_CUDA_CRT=1",
        ],
        "@cuda//:is_cuda_13_0_2": [
            "CUDA_SMOKE_HAVE_DRIVER_API=1",
            "CUDA_SMOKE_HAVE_CUBLAS=1",
            "CUDA_SMOKE_HAVE_CUFFT=1",
            "CUDA_SMOKE_HAVE_CUPTI=1",
            "CUDA_SMOKE_HAVE_CURAND=1",
            "CUDA_SMOKE_HAVE_CUSOLVER=1",
            "CUDA_SMOKE_HAVE_CUSPARSE=1",
            "CUDA_SMOKE_HAVE_PROFILER_API=1",
            "CUDA_SMOKE_HAVE_CUDA_CRT=1",
        ],
        "@cuda//:is_cuda_13_1_0": [
            "CUDA_SMOKE_HAVE_DRIVER_API=1",
            "CUDA_SMOKE_HAVE_CUBLAS=1",
            "CUDA_SMOKE_HAVE_CUFFT=1",
            "CUDA_SMOKE_HAVE_CUPTI=1",
            "CUDA_SMOKE_HAVE_CURAND=1",
            "CUDA_SMOKE_HAVE_CUSOLVER=1",
            "CUDA_SMOKE_HAVE_CUSPARSE=1",
            "CUDA_SMOKE_HAVE_PROFILER_API=1",
            "CUDA_SMOKE_HAVE_CUDA_CRT=1",
        ],
        "@cuda//:is_cuda_13_1_1": [
            "CUDA_SMOKE_HAVE_DRIVER_API=1",
            "CUDA_SMOKE_HAVE_CUBLAS=1",
            "CUDA_SMOKE_HAVE_CUFFT=1",
            "CUDA_SMOKE_HAVE_CUPTI=1",
            "CUDA_SMOKE_HAVE_CURAND=1",
            "CUDA_SMOKE_HAVE_CUSOLVER=1",
            "CUDA_SMOKE_HAVE_CUSPARSE=1",
            "CUDA_SMOKE_HAVE_PROFILER_API=1",
            "CUDA_SMOKE_HAVE_CUDA_CRT=1",
        ],
        "@cuda//:is_cuda_13_2_0": [
            "CUDA_SMOKE_HAVE_DRIVER_API=1",
            "CUDA_SMOKE_HAVE_CUBLAS=1",
            "CUDA_SMOKE_HAVE_CUFFT=1",
            "CUDA_SMOKE_HAVE_CUPTI=1",
            "CUDA_SMOKE_HAVE_CURAND=1",
            "CUDA_SMOKE_HAVE_CUSOLVER=1",
            "CUDA_SMOKE_HAVE_CUSPARSE=1",
            "CUDA_SMOKE_HAVE_PROFILER_API=1",
            "CUDA_SMOKE_HAVE_CUDA_CRT=1",
        ],
        "//conditions:default": [],
    }),
    data = [
        "@cuda//nvcc:fatbinary",
        "@cuda//nvcc:ptxas",
    ],
    deps = [
        "@cuda//cccl:headers",
        "@cuda//nvjitlink:nvjitlink_shared_library",
        "@cuda//nvml:nvidia-ml_stub",
        "@cuda//nvrtc:nvrtc_main",
        "@cuda//nvtx:headers",
    ] + select({
        "@cuda//:is_cuda_13_0_0": [
            "@cuda//cublas:cublas_shared_library",
            "@cuda//cublas:cublasLt_shared_library",
            "@cuda//cudart:cudart_shared_library",
            "@cuda//cudart:cuda_driver",
            "@cuda//cufft:cufft_shared_library",
            "@cuda//cupti:cupti_shared_library",
            "@cuda//curand:curand_shared_library",
            "@cuda//cusolver:cusolver_shared_library",
            "@cuda//cusparse:cusparse_shared_library",
            "@cuda//crt:headers",
            "@cuda//profiler_api:headers",
        ],
        "@cuda//:is_cuda_13_0_1": [
            "@cuda//cublas:cublas_shared_library",
            "@cuda//cublas:cublasLt_shared_library",
            "@cuda//cudart:cudart_shared_library",
            "@cuda//cudart:cuda_driver",
            "@cuda//cufft:cufft_shared_library",
            "@cuda//cupti:cupti_shared_library",
            "@cuda//curand:curand_shared_library",
            "@cuda//cusolver:cusolver_shared_library",
            "@cuda//cusparse:cusparse_shared_library",
            "@cuda//crt:headers",
            "@cuda//profiler_api:headers",
        ],
        "@cuda//:is_cuda_13_0_2": [
            "@cuda//cublas:cublas_shared_library",
            "@cuda//cublas:cublasLt_shared_library",
            "@cuda//cudart:cudart_shared_library",
            "@cuda//cudart:cuda_driver",
            "@cuda//cufft:cufft_shared_library",
            "@cuda//cupti:cupti_shared_library",
            "@cuda//curand:curand_shared_library",
            "@cuda//cusolver:cusolver_shared_library",
            "@cuda//cusparse:cusparse_shared_library",
            "@cuda//crt:headers",
            "@cuda//profiler_api:headers",
        ],
        "@cuda//:is_cuda_13_1_0": [
            "@cuda//cublas:cublas_shared_library",
            "@cuda//cublas:cublasLt_shared_library",
            "@cuda//cudart:cudart_shared_library",
            "@cuda//cudart:cuda_driver",
            "@cuda//cufft:cufft_shared_library",
            "@cuda//cupti:cupti_shared_library",
            "@cuda//curand:curand_shared_library",
            "@cuda//cusolver:cusolver_shared_library",
            "@cuda//cusparse:cusparse_shared_library",
            "@cuda//crt:headers",
            "@cuda//profiler_api:headers",
        ],
        "@cuda//:is_cuda_13_1_1": [
            "@cuda//cublas:cublas_shared_library",
            "@cuda//cublas:cublasLt_shared_library",
            "@cuda//cudart:cudart_shared_library",
            "@cuda//cudart:cuda_driver",
            "@cuda//cufft:cufft_shared_library",
            "@cuda//cupti:cupti_shared_library",
            "@cuda//curand:curand_shared_library",
            "@cuda//cusolver:cusolver_shared_library",
            "@cuda//cusparse:cusparse_shared_library",
            "@cuda//crt:headers",
            "@cuda//profiler_api:headers",
        ],
        "@cuda//:is_cuda_13_2_0": [
            "@cuda//cublas:cublas_shared_library",
            "@cuda//cublas:cublasLt_shared_library",
            "@cuda//cudart:cudart_shared_library",
            "@cuda//cudart:cuda_driver",
            "@cuda//cufft:cufft_shared_library",
            "@cuda//cupti:cupti_shared_library",
            "@cuda//curand:curand_shared_library",
            "@cuda//cusolver:cusolver_shared_library",
            "@cuda//cusparse:cusparse_shared_library",
            "@cuda//crt:headers",
            "@cuda//profiler_api:headers",
        ],
        "//conditions:default": [],
    }),
)

cc_binary(
    name = "smoke",
    srcs = ["main.cc"],
    deps = [":smoke_deps"],
)
