load("@rules_cc//cc:cc_binary.bzl", "cc_binary")
load("@rules_cc//cc:cc_library.bzl", "cc_library")
load("@cuda//cuda:selects.bzl", "if_cuda_version")

package(default_visibility = ["//visibility:public"])

SMOKE_CUDA_VERSIONS = [
    "12.8.1",
    "12.9.1",
    "13.0.2",
    "13.1.1",
    # "13.2.0",
]

[
    platform(
        name = "platform_linux_amd64_cuda_{}".format(version.replace(".", "_")),
        constraint_values = [
            "@platforms//os:linux",
            "@platforms//cpu:x86_64",
            "@cuda//:cuda_{}".format(version.replace(".", "_")),
        ],
    )
    for version in SMOKE_CUDA_VERSIONS
]

SMOKE_BASE_DEFINES = [
    "CUDA_SMOKE_HAVE_CUBLAS=1",
    "CUDA_SMOKE_HAVE_CUDART=1",
    "CUDA_SMOKE_HAVE_CUFFT=1",
    "CUDA_SMOKE_HAVE_CUPTI=1",
    "CUDA_SMOKE_HAVE_CURAND=1",
    "CUDA_SMOKE_HAVE_CUSOLVER=1",
    "CUDA_SMOKE_HAVE_CUSPARSE=1",
    "CUDA_SMOKE_HAVE_DRIVER_API=1",
    "CUDA_SMOKE_HAVE_NVJITLINK=1",
    "CUDA_SMOKE_HAVE_NVML=1",
    "CUDA_SMOKE_HAVE_NVRTC=1",
    "CUDA_SMOKE_HAVE_NVTX=1",
    "CUDA_SMOKE_HAVE_PROFILER_API=1",
]

SMOKE_CRT_DEFINES = [
    "CUDA_SMOKE_HAVE_CUDA_CRT=1",
]

SMOKE_CRT_DEFINE_SELECT = if_cuda_version(">=13", SMOKE_CRT_DEFINES)

SMOKE_BASE_SHARED_DEPS = [
    "@cuda//cccl:headers",
    "@cuda//cublas:cublas_shared_library",
    "@cuda//cublas:cublasLt_shared_library",
    "@cuda//cudart:cudart_shared_library",
    "@cuda//cudart:cuda_driver",
    "@cuda//cufft:cufft_shared_library",
    "@cuda//cupti:cupti_shared_library",
    "@cuda//curand:curand_shared_library",
    "@cuda//cusolver:cusolver_shared_library",
    "@cuda//cusparse:cusparse_shared_library",
    "@cuda//nvjitlink:nvjitlink_shared_library",
    "@cuda//nvml:nvidia-ml_stub",
    "@cuda//nvrtc:nvrtc_main",
    "@cuda//nvtx:headers",
    "@cuda//profiler_api:headers",
]

SMOKE_BASE_STATIC_DEPS = [
    "@cuda//cccl:headers",
    "@cuda//cublas:cublas_static",
    "@cuda//cudart:static",
    "@cuda//cufft:cufft_static",
    "@cuda//cupti:cupti_static",
    "@cuda//curand:curand_static",
    "@cuda//cusolver:cusolver_static",
    "@cuda//cusparse:cusparse_static",
    "@cuda//nvjitlink:nvjitlink_static",
    "@cuda//nvml:nvidia_ml_static_stub",
    "@cuda//nvrtc:nvrtc_static",
    "@cuda//nvtx:headers",
    "@cuda//profiler_api:headers",
]

SMOKE_CRT_SHARED_DEPS = [
    "@cuda//crt:headers",
]

SMOKE_CRT_STATIC_DEPS = [
    "@cuda//crt:headers",
]

SMOKE_CRT_SHARED_SELECT = if_cuda_version(">=13", SMOKE_CRT_SHARED_DEPS)

SMOKE_CRT_STATIC_SELECT = if_cuda_version(">=13", SMOKE_CRT_STATIC_DEPS)

cc_library(
    name = "smoke_deps",
    defines = SMOKE_BASE_DEFINES + SMOKE_CRT_DEFINE_SELECT,
    data = [
        "@cuda//nvcc:fatbinary",
        "@cuda//nvcc:ptxas",
    ],
    deps = SMOKE_BASE_SHARED_DEPS + SMOKE_CRT_SHARED_SELECT,
)

cc_binary(
    name = "smoke",
    srcs = ["main.cc"],
    deps = [":smoke_deps"],
)

cc_library(
    name = "smoke_static_deps",
    defines = SMOKE_BASE_DEFINES + SMOKE_CRT_DEFINE_SELECT,
    deps = SMOKE_BASE_STATIC_DEPS + SMOKE_CRT_STATIC_SELECT,
)

cc_binary(
    name = "smoke_static",
    srcs = ["main.cc"],
    # static archives use libstdc++ abi.
    tags = ["manual"],
    deps = [":smoke_static_deps"],
)

cc_binary(
    name = "cudnn_smoke",
    srcs = ["cudnn_smoke.cc"],
    deps = [
        ":smoke_test_common",
        "@cuda//cudnn:cudnn",
    ],
)

# host only since we do not have a rdc toolchain registered
cc_binary(
    name = "nvshmem_smoke",
    srcs = ["nvshmem_smoke.cc"],
    deps = [
        ":smoke_test_common",
        "@cuda//nvshmem:nvshmem",
    ],
)

cc_library(
    name = "smoke_test_common",
    hdrs = ["smoke_test_common.h"],
)

cc_library(
    name = "cuda_headers",
    deps = [
        "@cuda//cccl:nv_headers",
        "@cuda//cuda:cuda_headers",
        "@cuda//curand:headers",
    ],
)

cc_binary(
    name = "cublas_saxpy_smoke",
    srcs = ["cublas_saxpy_smoke.cc"],
    deps = [
        ":smoke_test_common",
        "@cuda//cublas:cublas",
        ":cuda_headers",
    ],
)

cc_binary(
    name = "cufft_1d_smoke",
    srcs = ["cufft_1d_smoke.cc"],
    deps = [
        ":smoke_test_common",
        "@cuda//cufft:cufft",
        ":cuda_headers",
    ],
)

cc_binary(
    name = "curand_generate_smoke",
    srcs = ["curand_generate_smoke.cc"],
    deps = [
        ":smoke_test_common",
        "@cuda//curand:curand",
        ":cuda_headers",
    ],
)

cc_binary(
    name = "cusparse_spmv_smoke",
    srcs = ["cusparse_spmv_smoke.cc"],
    deps = [
        ":smoke_test_common",
        "@cuda//cusparse:cusparse",
        ":cuda_headers",
    ],
)

cc_binary(
    name = "cusolver_cholesky_smoke",
    srcs = ["cusolver_cholesky_smoke.cc"],
    deps = [
        ":smoke_test_common",
        "@cuda//cusolver:cusolver",
        ":cuda_headers",
    ],
)

cc_binary(
    name = "cudnn_conv_descriptor_smoke",
    srcs = ["cudnn_conv_descriptor_smoke.cc"],
    deps = [
        ":smoke_test_common",
        "@cuda//cudnn:cudnn",
        ":cuda_headers",
    ],
)

cc_binary(
    name = "nvrtc_compile_smoke",
    srcs = ["nvrtc_compile_smoke.cc"],
    deps = [
        ":smoke_test_common",
        "@cuda//nvrtc:nvrtc",
    ],
)

cc_binary(
    name = "nvjitlink_link_smoke",
    srcs = ["nvjitlink_link_smoke.cc"],
    deps = [
        ":smoke_test_common",
        "@cuda//nvjitlink:nvjitlink",
    ],
)

cc_binary(
    name = "nvml_query_smoke",
    srcs = ["nvml_query_smoke.cc"],
    deps = [
        ":smoke_test_common",
        "@cuda//nvml:nvml",
    ],
)

cc_binary(
    name = "nvtx_range_smoke",
    srcs = ["nvtx_range_smoke.cc"],
    linkopts = ["-ldl"],
    deps = [
        ":smoke_test_common",
        "@cuda//nvtx:headers",
    ],
)

cc_binary(
    name = "cupti_activity_smoke",
    srcs = ["cupti_activity_smoke.cc"],
    deps = [
        ":smoke_test_common",
        "@cuda//cupti:cupti",
        ":cuda_headers",
    ],
)
