module(
    name = "cuda_toolkit_e2e",
    version = "0.0.0",
    bazel_compatibility = [">=7.4.0"],
    compatibility_level = 0,
)

bazel_dep(name = "llvm", version = "0.6.1")
bazel_dep(name = "rules_cc", version = "0.2.16")
bazel_dep(name = "cuda_toolkit", version = "0.0.0")

local_path_override(
    module_name = "cuda_toolkit",
    path = "..",
)

register_toolchains("@llvm//toolchain:all")

cuda_ext = use_extension("@cuda_toolkit//extensions:cuda.bzl", "cuda_ext")
cuda_ext.configure(
    cuda_version = "13.1.1",
    cudnn_version = "9.16.0",
)

use_repo(
    cuda_ext,
    "cuda",
    "cuda_cccl",
    "cuda_crt",
    "cuda_cublas",
    "cuda_cudart",
    "cuda_cudnn",
    "cuda_cufft",
    "cuda_cupti",
    "cuda_curand",
    "cuda_cusolver",
    "cuda_cusparse",
    "cuda_driver",
    "cuda_nvcc",
    "cuda_nvdisasm",
    "cuda_nvjitlink",
    "cuda_nvml",
    "cuda_nvrtc",
    "cuda_nvtx",
    "cuda_nvvm",
    "cuda_profiler_api",
)
