load("@bazel_lib//:bzl_library.bzl", "bzl_library")
load("@stardoc//stardoc:stardoc.bzl", "stardoc")

bzl_library(
    name = "cuda",
    srcs = ["cuda.bzl"],
    visibility = ["//visibility:public"],
    deps = [
        "//cuda:cuda_redist_repositories",
        "//cuda:cuda_redist_repository",
        "//cuda:cuda_component_proxy",
        "//cuda:cuda_compat_repository",
        "//cudnn:cudnn_redist_repositories",
        "//cudnn:cudnn_redist_repository",
        "//cudnn:cudnn_compat_repository",
    ],
)

bzl_library(
    name = "nvshmem",
    srcs = ["nvshmem.bzl"],
    visibility = ["//visibility:public"],
    deps = [
        "//nvshmem:nvshmem_redist_repositories",
        "//nvshmem:nvshmem_redist_repository",
        "//nvshmem:nvshmem_compat_repository",
    ],
)

stardoc(
    name = "cuda-docs",
    out = "cuda.md",
    input = "cuda.bzl",
    deps = [":cuda"],
)

stardoc(
    name = "nvshmem-docs",
    out = "nvshmem.md",
    input = "nvshmem.bzl",
    deps = [":nvshmem"],
)
