load("@bazel_lib//:bzl_library.bzl", "bzl_library")
load("@stardoc//stardoc:stardoc.bzl", "stardoc")

bzl_library(
    name = "cuda",
    srcs = ["cuda.bzl"],
    visibility = ["//visibility:public"],
    deps = [
        "//cuda:cuda_redist_repositories",
        "//cuda:cuda_redist_repository",
        "//cuda:cuda_component_proxy",
        "//cuda:cuda_compat_repository",
        "//cudnn:cudnn_redist_build_defs",
        "//nvshmem:nvshmem_redist_build_defs",
    ],
)

stardoc(
    name = "cuda-docs",
    out = "cuda.md",
    input = "cuda.bzl",
    deps = [":cuda"],
)
