load("@bazel_lib//:bzl_library.bzl", "bzl_library")

bzl_library(
    name = "nvshmem_compat_repository",
    srcs = ["nvshmem_compat_repository.bzl"],
    visibility = ["//visibility:public"],
)

bzl_library(
    name = "nvshmem_redist_build_defs",
    srcs = ["nvshmem_redist_build_defs.bzl"],
    visibility = ["//visibility:public"],
)

bzl_library(
    name = "nvshmem_redist_repositories",
    srcs = ["nvshmem_redist_repositories.bzl"],
    visibility = ["//visibility:public"],
    deps = [
        ":nvshmem_redist_build_defs",
    ],
)

bzl_library(
    name = "nvshmem_redist_repository",
    srcs = ["nvshmem_redist_repository.bzl"],
    visibility = ["//visibility:public"],
    deps = [":redist_proxy_targets"],
)

bzl_library(
    name = "redist_proxy_targets",
    srcs = ["redist_proxy_targets.bzl"],
    visibility = ["//visibility:public"],
)
